test/tests/stages/14_pointers/valid/libraries/static_pointer_client.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[125]:
  long
  *
  identifier(get_pointer)
  (
  void
  )
  ;
  int
  identifier(set_pointer)
  (
  long
  *
  identifier(new_ptr)
  )
  ;
  static
  long
  identifier(private_long)
  =
  const long(100l)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  long
  *
  identifier(initial_ptr)
  =
  identifier(get_pointer)
  (
  )
  ;
  if
  (
  identifier(initial_ptr)
  )
  {
  return
  const int(1)
  ;
  }
  identifier(set_pointer)
  (
  &
  identifier(private_long)
  )
  ;
  long
  *
  identifier(new_ptr)
  =
  identifier(get_pointer)
  (
  )
  ;
  if
  (
  identifier(initial_ptr)
  ==
  identifier(new_ptr)
  )
  {
  return
  const int(2)
  ;
  }
  if
  (
  *
  identifier(new_ptr)
  !=
  const long(100l)
  )
  {
  return
  const int(3)
  ;
  }
  if
  (
  identifier(new_ptr)
  !=
  &
  identifier(private_long)
  )
  {
  return
  const int(4)
  ;
  }
  identifier(set_pointer)
  (
  const int(0)
  )
  ;
  if
  (
  identifier(get_pointer)
  (
  )
  )
  {
  return
  const int(5)
  ;
  }
  if
  (
  identifier(new_ptr)
  !=
  &
  identifier(private_long)
  )
  {
  return
  const int(6)
  ;
  }
  return
  const int(0)
  ;
  }
