test/tests/stages/14_pointers/invalid_types/extra_credit/bitwise_compound_assign_with_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(null)
  =
  const int(0)
  ;
  int
  identifier(x)
  =
  const int(100)
  ;
  identifier(x)
  |=
  identifier(null)
  ;
  return
  const int(1)
  ;
  }
